# ChangeLog for dev-perl/RPC-XML
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/RPC-XML/ChangeLog,v 1.49 2009/09/07 08:34:57 tove Exp $

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -RPC-XML-0.67.ebuild:
  Cleanup

*RPC-XML-0.69 (05 Sep 2009)

  05 Sep 2009; Torsten Veller <tove@gentoo.org> +RPC-XML-0.69.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -RPC-XML-0.64.ebuild,
  -RPC-XML-0.65.ebuild:
  Cleanup

*RPC-XML-0.67 (10 Jul 2009)

  10 Jul 2009; Torsten Veller <tove@gentoo.org> +RPC-XML-0.67.ebuild:
  Version bump

*RPC-XML-0.65 (21 Jun 2009)

  21 Jun 2009; Torsten Veller <tove@gentoo.org> +RPC-XML-0.65.ebuild:
  Version bump

  03 Jun 2009; Torsten Veller <tove@gentoo.org> -RPC-XML-0.63.ebuild:
  Cleanup

*RPC-XML-0.64 (30 Sep 2008)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -RPC-XML-0.61.ebuild,
  +RPC-XML-0.64.ebuild:
  Version bump. Cleanup

*RPC-XML-0.63 (20 Sep 2008)

  20 Sep 2008; Torsten Veller <tove@gentoo.org> +RPC-XML-0.63.ebuild:
  Version bump

*RPC-XML-0.61 (17 Sep 2008)

  17 Sep 2008; Torsten Veller <tove@gentoo.org> +RPC-XML-0.61.ebuild:
  Version bump. DESCRIPTION and LICENSE changed

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -RPC-XML-0.40.ebuild,
  -RPC-XML-0.40-r1.ebuild, -RPC-XML-0.53.ebuild, -RPC-XML-0.54.ebuild,
  -RPC-XML-0.58.ebuild:
  Cleanup

  06 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  29 Jul 2007; Christian Heim <phreak@gentoo.org> RPC-XML-0.54.ebuild,
  RPC-XML-0.58.ebuild, RPC-XML-0.59.ebuild:
  Fixing the DEPEND/RDEPEND for the move of net-www/apache to
  www-servers/apache (#78622).

  12 May 2007; Luca Longinotti <chtekk@gentoo.org> RPC-XML-0.54.ebuild,
  RPC-XML-0.58.ebuild, RPC-XML-0.59.ebuild:
  Remove apache1 support (mod_perl-1* dependency).

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> RPC-XML-0.59.ebuild:
  Stable on x86, bug #169152.
