@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/RPC-XML
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/RPC-XML/ChangeLog,v 1.49 2009/09/07 08:34:57 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/RPC-XML/ChangeLog,v 1.50 2009/12/14 19:33:00 tove Exp $
+
+*RPC-XML-0.72 (14 Dec 2009)
+
+  14 Dec 2009; Torsten Veller <tove@gentoo.org> +RPC-XML-0.72.ebuild:
+  Version bump
 
   07 Sep 2009; Torsten Veller <tove@gentoo.org> -RPC-XML-0.67.ebuild:
   Cleanup
